--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 
 :root {
-    --bg-color: #222831;
-    --primary-color: #DDDDDD;
-    --secondary-color: #F05454;
+    --bg-color: #064db8;
+    --primary-color: #15eaf1;
+    --secondary-color: #56d822;
     --font: "Nunito Sans", sans-serif;
 }
 
