--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 
 :root {
-    --bg-color: #064db8;
-    --primary-color: #15eaf1;
+    --bg-color: #5ef7ea;
+    --primary-color: #0d3fc9;
     --secondary-color: #56d822;
     --font: "Nunito Sans", sans-serif;
 }
