--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 :root {
     --bg-color: #5ef7ea;
     --primary-color: #0d3fc9;
-    --secondary-color: #56d822;
+    --secondary-color:FF00FF;
     --font: "Sofá Um", sans-serif;
 }
 
