--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Protest+Guerrilla&family=Sofadi+One&display=swap');
 
 :root {
-    --bg-color: #5ef7ea;
+    --bg-color: #070506;
     --primary-color: #0d3fc9;
-    --secondary-color:#FF00FF;
+    --secondary-color:#19c0dd;
     --font: "Sofá Um", sans-serif;
 }
 
