--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 :root {
     --bg-color: #070506;
-    --primary-color: #0d3fc9;
-    --secondary-color:#19c0dd;
+    --primary-color: #020818;
+    --secondary-color:#192122;
     --font: "Sofá Um", sans-serif;
 }
 
