--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Protest+Guerrilla&family=Sofadi+One&display=swap');
 
 :root {
-    --bg-color: #070506;
+    --bg-color: #bd2973;
     --primary-color: #020818;
     --secondary-color:#192122;
     --font: "Sofá Um", sans-serif;
