--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 :root {
     --bg-color: #bd2973;
-    --primary-color: #020818;
-    --secondary-color:#192122;
+    --primary-color: #9db1e9;
+    --secondary-color:#60ddee;
     --font: "Sofá Um", sans-serif;
 }
 
